[gd_scene load_steps=8 format=3 uid="uid://den4sw3hsbw3x"]

[ext_resource type="Script" uid="uid://druxnkky5kryt" path="res://addons/ExtraUIControls/option_button_spinbox.gd" id="1_drhf8"]
[ext_resource type="PackedScene" uid="uid://dl27xojitjda0" path="res://addons/ExtraUIControls/search_component.tscn" id="2_74ip2"]
[ext_resource type="Texture2D" uid="uid://chy8fwbwhf0k5" path="res://addons/ExtraUIControls/icons/icon_arrow_big_up.svg" id="2_nsdj5"]
[ext_resource type="Texture2D" uid="uid://buo6fr7avt1oq" path="res://addons/ExtraUIControls/icons/icon_close.svg" id="2_woktx"]
[ext_resource type="Texture2D" uid="uid://dw0120rvs3f6p" path="res://addons/ExtraUIControls/icons/icon_arrow_big_down.svg" id="3_74ip2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_woktx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftcf3"]
content_margin_left = 2.0
content_margin_right = 2.0
draw_center = false

[node name="OptionButtonSpinbox" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_drhf8")

[node name="options_button_hbox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="popup_button" type="Button" parent="options_button_hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
action_mode = 0
text = "(select)"
text_overrun_behavior = 3

[node name="clear_selection_button" type="Button" parent="options_button_hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme_override_constants/icon_max_width = 16
icon = ExtResource("2_woktx")
text_overrun_behavior = 3

[node name="options_popup_window" type="Window" parent="."]
unique_name_in_owner = true
size = Vector2i(132, 128)
visible = false
wrap_controls = true
unresizable = true
borderless = true
always_on_top = true
popup_window = true

[node name="options_popup" type="PanelContainer" parent="options_popup_window"]
unique_name_in_owner = true
offset_right = 363.0
offset_bottom = 246.0

[node name="MarginContainer" type="MarginContainer" parent="options_popup_window/options_popup"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="options_popup_window/options_popup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="search" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer" instance=ExtResource("2_74ip2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="up_button" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_woktx")
icon = ExtResource("2_nsdj5")
icon_alignment = 1

[node name="OptionsContainerClipper" type="Control" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="OptionsContainer" type="VBoxContainer" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 331.0
offset_bottom = 217.0
size_flags_horizontal = 3

[node name="Label" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ftcf3")
disabled = true
text = "Label"
alignment = 0

[node name="Button5" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
text = "Option 1"
alignment = 0

[node name="Button6" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
text = "Option 1"
alignment = 0

[node name="Button2" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ftcf3")
text = "Option 1"
alignment = 0

[node name="label2" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ftcf3")
disabled = true
text = "Label"
alignment = 0

[node name="Button4" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ftcf3")
text = "Option 1"
alignment = 0

[node name="Button3" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer/OptionsContainerClipper/OptionsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ftcf3")
text = "Option 1"
alignment = 0

[node name="down_button" type="Button" parent="options_popup_window/options_popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_woktx")
icon = ExtResource("3_74ip2")
icon_alignment = 1
